--- a/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
@@ -4,5 +4,6 @@
   "sn54.16:0.3": "Des mendiants (2)",
   "sn54.16:1.1": "En ce jour-là, un certain nombre de mendiants vinrent voir le Fortuné, lui rendirent hommage et s’assirent d’un côté. Une fois assis là, le Fortuné leur dit :",
   "sn54.16:1.2": "«Y a-t-il, mendiants, un état qui, lorsqu’il est développé et cultivé abondamment, porte quatre états à leur complétude ? Y a-t-il quatre états qui, lorsqu’ils sont développés et cultivés abondamment, portent sept états à leur complétude ? Et y a-t-il sept états qui, lorsqu’ils sont développés et cultivés abondamment, portent deux états à leur complétude ?",
-  "sn54.16:1.3": "— Bhanté, les enseignements proviennent du Fortuné (…) l’ayant entendu de la part du Fortuné, les mendiants le retiendront."
+  "sn54.16:1.3": "— Bhanté, les enseignements proviennent du Fortuné (…) l’ayant entendu de la part du Fortuné, les mendiants le retiendront.",
+  "sn54.16:1.4": "— Il y a, mendiants, un état qui, lorsqu’il est développé et cultivé abondamment, porte quatre états à leur complétude. Il y a quatre états qui, lorsqu’ils sont développés et cultivés abondamment, portent sept états à leur complétude. Et il y a sept états qui, lorsqu’ils sont développés et cultivés abondamment, portent deux états à leur complétude."
 }
