Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
@@ -17,5 +17,6 @@
   "sn54.16:4.3": "où il s’entraîne : «je vais inspirer en calmant les constructions corporelles» ; où il s’entraîne : «je vais expirer en calmant les constructions corporelles»,",
   "sn54.16:4.4": "à ce moment-là le mendiant reste à observer le corps dans le corps, ardent, doué d’un discernement attentif, présent d’esprit, ayant abandonné convoitise et affliction mentale vis-à-vis du monde.",
   "sn54.16:4.5": "Et quelle en est la raison ?",
-  "sn54.16:4.6": "Je parle, mendiants, de l’inspiration-et-expiration comme d’un certain corps."
+  "sn54.16:4.6": "Je parle, mendiants, de l’inspiration-et-expiration comme d’un certain corps.",
+  "sn54.16:4.7": "C’est pourquoi, mendiants, à ce moment-là, un mendiant reste à observer le corps dans le corps, ardent, doué d’un discernement attentif, présent d’esprit, ayant abandonné convoitise et affliction mentale vis-à-vis du monde."
 }
