--- a/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
@@ -20,5 +20,6 @@
   "sn54.16:4.6": "Je parle, mendiants, de l’inspiration-et-expiration comme d’un certain corps.",
   "sn54.16:4.7": "C’est pourquoi, mendiants, à ce moment-là, un mendiant reste à observer le corps dans le corps, ardent, doué d’un discernement attentif, présent d’esprit, ayant abandonné convoitise et affliction mentale vis-à-vis du monde.",
   "sn54.16:5.1": "Au moment, mendiants, où un mendiant s’entraîne : ’je vais inspirer en ressentant l’exaltation’ ; où il s’entraîne : «je vais expirer en ressentant l’exaltation’ ;",
-  "sn54.16:5.2": "où il s’entraîne : «je vais inspirer en ressentant le bien-être’ ; où il s’entraîne : «je vais expirer en ressentant le bien-être’ ;"
+  "sn54.16:5.2": "où il s’entraîne : «je vais inspirer en ressentant le bien-être’ ; où il s’entraîne : «je vais expirer en ressentant le bien-être’ ;",
+  "sn54.16:5.3": "où il s’entraîne : «je vais inspirer en ressentant les fabrications de l’esprit’ ; où il s’entraîne : «je vais expirer en ressentant les fabrications de l’esprit’ ;"
 }
