--- a/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
@@ -22,5 +22,6 @@
   "sn54.16:5.1": "Au moment, mendiants, où un mendiant s’entraîne : ’je vais inspirer en ressentant l’exaltation’ ; où il s’entraîne : «je vais expirer en ressentant l’exaltation’ ;",
   "sn54.16:5.2": "où il s’entraîne : «je vais inspirer en ressentant le bien-être’ ; où il s’entraîne : «je vais expirer en ressentant le bien-être’ ;",
   "sn54.16:5.3": "où il s’entraîne : «je vais inspirer en ressentant les fabrications de l’esprit’ ; où il s’entraîne : «je vais expirer en ressentant les fabrications de l’esprit’ ;",
-  "sn54.16:5.4": "où il s’entraîne : «je vais inspirer en calmant les fabrications de l’esprit’ ; où il s’entraîne : «je vais expirer en calmant les fabrications de l’esprit’,"
+  "sn54.16:5.4": "où il s’entraîne : «je vais inspirer en calmant les fabrications de l’esprit’ ; où il s’entraîne : «je vais expirer en calmant les fabrications de l’esprit’,",
+  "sn54.16:5.5": "à ce moment-là le mendiant reste à observer les ressentis dans les ressentis, ardent, doué d’un discernement attentif, présent d’esprit, ayant abandonné convoitise et affliction mentale vis-à-vis du monde."
 }
