--- a/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
@@ -28,5 +28,6 @@
   "sn54.16:5.7": "Je parle, mendiants, de l’attention minutieuse portée à l’inspiration-et-expiration comme d’un certain ressenti.",
   "sn54.16:5.8": "C’est pourquoi, mendiants, à ce moment-là, un mendiant reste à observer les ressentis dans les ressentis, ardent, doué d’un discernement attentif, présent d’esprit, ayant abandonné convoitise et affliction mentale vis-à-vis du monde.",
   "sn54.16:6.1": "Au moment, mendiants, où un mendiant s’entraîne : ’je vais inspirer en ressentant l’esprit’ ; où il s’entraîne : «je vais expirer en ressentant l’esprit’ ;",
-  "sn54.16:6.2": "où il s’entraîne : «je vais inspirer en réjouissant l’esprit’ ; où il s’entraîne : «je vais expirer en réjouissant l’esprit’ ;"
+  "sn54.16:6.2": "où il s’entraîne : «je vais inspirer en réjouissant l’esprit’ ; où il s’entraîne : «je vais expirer en réjouissant l’esprit’ ;",
+  "sn54.16:6.3": "où il s’entraîne : «je vais inspirer en concentrant l’esprit’ ; où il s’entraîne : «je vais expirer en concentrant l’esprit’ ;"
 }
