--- a/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
@@ -32,5 +32,6 @@
   "sn54.16:6.3": "où il s’entraîne : «je vais inspirer en concentrant l’esprit’ ; où il s’entraîne : «je vais expirer en concentrant l’esprit’ ;",
   "sn54.16:6.4": "où il s’entraîne : «je vais inspirer en délivrant l’esprit» ; où il s’entraîne : «je vais expirer en délivrant l’esprit»,",
   "sn54.16:6.5": "à ce moment-là le mendiant reste à observer l’esprit dans l’esprit, en étant ardent, doué d’un discernement attentif, présent d’esprit, ayant abandonné convoitise et affliction mentale vis-à-vis du monde.",
-  "sn54.16:6.6": "Et quelle en est la raison ?"
+  "sn54.16:6.6": "Et quelle en est la raison ?",
+  "sn54.16:6.7": "Je ne parle pas, mendiants, de développement de la concentration au moyen de la présence de l’esprit sur la respiration pour celui qui est étourdi d’esprit et qui n’est pas doué d’un discernement attentif."
 }
