--- a/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
@@ -36,5 +36,6 @@
   "sn54.16:6.7": "Je ne parle pas, mendiants, de développement de la concentration au moyen de la présence de l’esprit sur la respiration pour celui qui est étourdi d’esprit et qui n’est pas doué d’un discernement attentif.",
   "sn54.16:6.8": "C’est pourquoi, mendiants, à ce moment-là, un mendiant reste à observer l’esprit dans l’esprit, en étant ardent, doué d’un discernement attentif, présent d’esprit, ayant abandonné convoitise et affliction mentale vis-à-vis du monde.",
   "sn54.16:7.1": "Au moment, mendiants, où un mendiant s’entraîne : ’je vais inspirer en contemplant l’impermanence’ ; où il s’entraîne : «je vais expirer en contemplant l’impermanence’ ;",
-  "sn54.16:7.2": "où il s’entraîne : «je vais inspirer en contemplant le désintéressement’ ; où il s’entraîne : «je vais expirer en contemplant le désintéressement’ ;"
+  "sn54.16:7.2": "où il s’entraîne : «je vais inspirer en contemplant le désintéressement’ ; où il s’entraîne : «je vais expirer en contemplant le désintéressement’ ;",
+  "sn54.16:7.3": "où il s’entraîne : «je vais inspirer en contemplant la cessation’ ; où il s’entraîne : «je vais expirer en contemplant la cessation’ ;"
 }
