--- a/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
@@ -37,5 +37,6 @@
   "sn54.16:6.8": "C’est pourquoi, mendiants, à ce moment-là, un mendiant reste à observer l’esprit dans l’esprit, en étant ardent, doué d’un discernement attentif, présent d’esprit, ayant abandonné convoitise et affliction mentale vis-à-vis du monde.",
   "sn54.16:7.1": "Au moment, mendiants, où un mendiant s’entraîne : ’je vais inspirer en contemplant l’impermanence’ ; où il s’entraîne : «je vais expirer en contemplant l’impermanence’ ;",
   "sn54.16:7.2": "où il s’entraîne : «je vais inspirer en contemplant le désintéressement’ ; où il s’entraîne : «je vais expirer en contemplant le désintéressement’ ;",
-  "sn54.16:7.3": "où il s’entraîne : «je vais inspirer en contemplant la cessation’ ; où il s’entraîne : «je vais expirer en contemplant la cessation’ ;"
+  "sn54.16:7.3": "où il s’entraîne : «je vais inspirer en contemplant la cessation’ ; où il s’entraîne : «je vais expirer en contemplant la cessation’ ;",
+  "sn54.16:7.4": "il s’entraîne : «je vais inspirer en contemplant la renonciation» ; il s’entraîne : «je vais expirer en contemplant la renonciation»."
 }
