--- a/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
@@ -40,5 +40,6 @@
   "sn54.16:7.3": "où il s’entraîne : «je vais inspirer en contemplant la cessation’ ; où il s’entraîne : «je vais expirer en contemplant la cessation’ ;",
   "sn54.16:7.4": "il s’entraîne : «je vais inspirer en contemplant la renonciation» ; il s’entraîne : «je vais expirer en contemplant la renonciation».",
   "sn54.16:7.5": "à ce moment-là le mendiant reste à observer le Dhamma dans les phénomènes, ardent, doué d’un discernement attentif, présent d’esprit, ayant abandonné convoitise et affliction mentale vis-à-vis du monde.",
-  "sn54.16:7.6": "Ayant vu avec discernement ce qu’est l’abandon de la convoitise et de l’affliction mentale, il observe minutieusement avec équanimité."
+  "sn54.16:7.6": "Ayant vu avec discernement ce qu’est l’abandon de la convoitise et de l’affliction mentale, il observe minutieusement avec équanimité.",
+  "sn54.16:7.7": "C’est pourquoi, mendiants, à ce moment-là, un mendiant reste à observer le Dhamma dans les phénomènes, ardent, doué d’un discernement attentif, présent d’esprit, ayant abandonné convoitise et affliction mentale vis-à-vis du monde."
 }
