--- a/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
@@ -45,5 +45,6 @@
   "sn54.16:8.1": "Voici, mendiants, comment la concentration au moyen de la présence de l’esprit sur la respiration est développée et cultivée, de manière à porter les quatre mises en place de la présence d’esprit à leur complétude.",
   "sn54.16:9.1": "Et comment, mendiants, les quatre mises en place de la présence d’esprit sont-elles développées et cultivées abondamment de manière à porter les sept facteurs d’éveil à leur complétude ?",
   "sn54.16:9.2": "Au moment, mendiants, où un mendiant reste à observer le corps dans le corps, à ce moment-là la présence d’esprit de ce mendiant est mise en place, sans distraction.",
-  "sn54.16:9.3": "Au moment, mendiants, où la présence d’esprit d’un mendiant est mise en place, sans distraction,"
+  "sn54.16:9.3": "Au moment, mendiants, où la présence d’esprit d’un mendiant est mise en place, sans distraction,",
+  "sn54.16:9.4": "à ce moment-là le facteur d’éveil de présence d’esprit est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil de présence d’esprit, à ce moment-là le facteur d’éveil de présence d’esprit va à la complétude de son développement chez ce mendiant."
 }
