Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
@@ -47,5 +47,6 @@
   "sn54.16:9.2": "Au moment, mendiants, où un mendiant reste à observer le corps dans le corps, à ce moment-là la présence d’esprit de ce mendiant est mise en place, sans distraction.",
   "sn54.16:9.3": "Au moment, mendiants, où la présence d’esprit d’un mendiant est mise en place, sans distraction,",
   "sn54.16:9.4": "à ce moment-là le facteur d’éveil de présence d’esprit est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil de présence d’esprit, à ce moment-là le facteur d’éveil de présence d’esprit va à la complétude de son développement chez ce mendiant.",
-  "sn54.16:10.1": "En demeurant ainsi présent d’esprit, il examine, analyse et investigue minutieusement cet état avec discernement."
+  "sn54.16:10.1": "En demeurant ainsi présent d’esprit, il examine, analyse et investigue minutieusement cet état avec discernement.",
+  "sn54.16:10.2": "Au moment, mendiants, où un mendiant demeure ainsi présent d’esprit et qu’il examine, analyse et investigue minutieusement cet état avec discernement,"
 }
