--- a/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
@@ -54,5 +54,6 @@
   "sn54.16:11.2": "Au moment, mendiants, où examinant, analysant et investiguant minutieusement cet état avec discernement, une énergie sans relâchement est activée chez un mendiant,",
   "sn54.16:11.3": "à ce moment-là le facteur d’éveil d’énergie est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil d’énergie, à ce moment-là, le facteur d’éveil d’énergie va à la complétude de son développement chez ce mendiant.",
   "sn54.16:12.1": "Chez celui qui a son énergie activée, une exaltation détachée de la chair apparaît.",
-  "sn54.16:12.2": "Au moment, mendiants, où une exaltation détachée de la chair apparaît chez un mendiant qui a son énergie activée,"
+  "sn54.16:12.2": "Au moment, mendiants, où une exaltation détachée de la chair apparaît chez un mendiant qui a son énergie activée,",
+  "sn54.16:12.3": "à ce moment-là le facteur d’éveil d’exaltation est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil d’exaltation, à ce moment-là le facteur d’éveil d’exaltation va à la complétude de son développement chez ce mendiant."
 }
