Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
@@ -57,5 +57,6 @@
   "sn54.16:12.2": "Au moment, mendiants, où une exaltation détachée de la chair apparaît chez un mendiant qui a son énergie activée,",
   "sn54.16:12.3": "à ce moment-là le facteur d’éveil d’exaltation est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil d’exaltation, à ce moment-là le facteur d’éveil d’exaltation va à la complétude de son développement chez ce mendiant.",
   "sn54.16:13.1": "Chez celui qui a un esprit exalté, le corps se calme et l’esprit se calme.",
-  "sn54.16:13.2": "Au moment, mendiants, où chez un mendiant qui a un esprit exalté le corps se calme et l’esprit se calme,"
+  "sn54.16:13.2": "Au moment, mendiants, où chez un mendiant qui a un esprit exalté le corps se calme et l’esprit se calme,",
+  "sn54.16:13.3": "à ce moment-là, le facteur d’éveil de tranquillité est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil de tranquillité, à ce moment-là, le facteur d’éveil de tranquillité va à la complétude de son développement chez ce mendiant."
 }
