Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
@@ -60,5 +60,6 @@
   "sn54.16:13.2": "Au moment, mendiants, où chez un mendiant qui a un esprit exalté le corps se calme et l’esprit se calme,",
   "sn54.16:13.3": "à ce moment-là, le facteur d’éveil de tranquillité est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil de tranquillité, à ce moment-là, le facteur d’éveil de tranquillité va à la complétude de son développement chez ce mendiant.",
   "sn54.16:14.1": "Chez celui dont le corps est calme et qui est dans le bien-être, l’esprit se concentre.",
-  "sn54.16:14.2": "Au moment, mendiants, où chez un mendiant dont le corps est calme et qui est dans le bien-être, l’esprit se concentre,"
+  "sn54.16:14.2": "Au moment, mendiants, où chez un mendiant dont le corps est calme et qui est dans le bien-être, l’esprit se concentre,",
+  "sn54.16:14.3": "à ce moment-là le facteur d’éveil de concentration est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil de concentration, à ce moment-là le facteur d’éveil de concentration va à la complétude de son développement chez ce mendiant."
 }
