--- a/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
@@ -66,5 +66,6 @@
   "sn54.16:15.2": "Au moment, mendiants, où un mendiant observe minutieusement avec équanimité l’esprit qui est ainsi devenu concentré,",
   "sn54.16:15.3": "à ce moment-là, le facteur d’éveil d’équanimité est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil d’équanimité, à ce moment-là, le facteur d’éveil d’équanimité va à la complétude de son développement chez ce mendiant.",
   "sn54.16:16.1": "Au moment, Ananda, où un mendiant reste à observer les ressentis dans les ressentis (…)",
-  "sn54.16:16.2": "l’esprit dans l’esprit (…)"
+  "sn54.16:16.2": "l’esprit dans l’esprit (…)",
+  "sn54.16:16.3": "le Dhamma dans les phénomènes, à ce moment-là la présence d’esprit de ce mendiant est mise en place, sans distraction."
 }
