--- a/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
@@ -70,5 +70,6 @@
   "sn54.16:16.3": "le Dhamma dans les phénomènes, à ce moment-là la présence d’esprit de ce mendiant est mise en place, sans distraction.",
   "sn54.16:16.4": "Au moment, mendiants, où la présence d’esprit d’un mendiant est mise en place, sans distraction,",
   "sn54.16:16.5": "à ce moment-là le facteur d’éveil de présence d’esprit est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil de présence d’esprit, à ce moment-là le facteur d’éveil de présence d’esprit va à la complétude de son développement chez ce mendiant (…)",
-  "sn54.16:17.1": "Il observe minutieusement avec équanimité l’esprit qui est ainsi devenu concentré."
+  "sn54.16:17.1": "Il observe minutieusement avec équanimité l’esprit qui est ainsi devenu concentré.",
+  "sn54.16:17.2": "Au moment, mendiants, où un mendiant observe minutieusement avec équanimité l’esprit qui est ainsi devenu concentré,"
 }
