--- a/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
@@ -73,5 +73,6 @@
   "sn54.16:17.1": "Il observe minutieusement avec équanimité l’esprit qui est ainsi devenu concentré.",
   "sn54.16:17.2": "Au moment, mendiants, où un mendiant observe minutieusement avec équanimité l’esprit qui est ainsi devenu concentré,",
   "sn54.16:17.3": "à ce moment-là, le facteur d’éveil d’équanimité est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil d’équanimité, à ce moment-là, le facteur d’éveil d’équanimité va à la complétude de son développement chez ce mendiant.",
-  "sn54.16:17.4": "Voici, mendiants, comment les quatre mises en place de la présence d’esprit sont développées et cultivées abondamment de manière à porter les sept facteurs d’éveil à leur complétude."
+  "sn54.16:17.4": "Voici, mendiants, comment les quatre mises en place de la présence d’esprit sont développées et cultivées abondamment de manière à porter les sept facteurs d’éveil à leur complétude.",
+  "sn54.16:18.1": "Comment, mendiants, les sept facteurs d’éveil sont-ils développés et cultivés abondamment de manière à porter la véritable connaissance & libération à leur complétude ?"
 }
