Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.16_translation-fr-sekha.json
@@ -76,5 +76,6 @@
   "sn54.16:17.4": "Voici, mendiants, comment les quatre mises en place de la présence d’esprit sont développées et cultivées abondamment de manière à porter les sept facteurs d’éveil à leur complétude.",
   "sn54.16:18.1": "Comment, mendiants, les sept facteurs d’éveil sont-ils développés et cultivés abondamment de manière à porter la véritable connaissance & libération à leur complétude ?",
   "sn54.16:18.2": "En cela, un mendiant développe le facteur d’éveil de présence d’esprit accompagné de la présence de l’esprit sur la respiration, basé sur l’isolement, sur le désintéressement, sur la cessation, se parachevant dans le lâcher-prise.",
-  "sn54.16:18.3": "il développe le facteur d’éveil d’investigation des phénomènes basé sur l’isolement, sur le désintéressement, sur la cessation, mûrissant dans le lâcher-prise (…)"
+  "sn54.16:18.3": "il développe le facteur d’éveil d’investigation des phénomènes basé sur l’isolement, sur le désintéressement, sur la cessation, mûrissant dans le lâcher-prise (…)",
+  "sn54.16:18.4": "il développe le facteur d’éveil d’équanimité basé sur l’isolement, sur le désintéressement, sur la cessation, mûrissant dans le lâcher-prise."
 }
