Translations by BhikkhuSekha to translation/fr/sekha/sutta/an/an11/an11.22-29_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/an/an11/an11.22-29_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.22-29_translation-fr-sekha.json
@@ -1,4 +1,4 @@
 {
   "an11.22:0.1": "Discours Sous Forme De Listes 11.22–29",
-  "an11.22:0.2": "Les cinquante premiers"
+  "an11.22:0.2": "Premier groupe de cinquante discours"
 }
