Translations by BhikkhuSekha to translation/fr/sekha/sutta/an/an11/an11.22-29_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/an/an11/an11.22-29_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.22-29_translation-fr-sekha.json
@@ -2,5 +2,6 @@
   "an11.22:0.1": "Discours Sous Forme De Listes 11.22–29",
   "an11.22:0.2": "Premier groupe de cinquante discours",
   "an11.22:0.3": "Similarité",
-  "an11.22:0.4": "Discours sur les yeux sans titre"
+  "an11.22:0.4": "Discours sur les yeux sans titre",
+  "an11.22:1.1": "Mendiants, un bouvier doué de onze caractéristiques est incapable de s’occuper d’un troupeau de vaches et de le faire croître."
 }
