--- a/translation/fr/sekha/sutta/an/an11/an11.22-29_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.22-29_translation-fr-sekha.json
@@ -6,5 +6,6 @@
   "an11.22:1.1": "Mendiants, un bouvier doué de onze caractéristiques est incapable de s’occuper d’un troupeau de vaches et de le faire croître.",
   "an11.22:1.2": "Quelles sont ces onze ?",
   "an11.22:1.3": "En cela, mendiants, le bouvier ne connaît pas les formes, il n’est pas connaisseur en matière de caractéristiques, il ne retire pas les œufs de mouches, il ne panse pas les plaies, il ne produit pas de fumée (de feu), il ne connaît pas les gués, il ne connaît pas les rafraîchissements, il ne connaît pas le chemin, il n’est pas connaisseur en matière de pâturages, il trait (les vaches) intégralement, et il ne traite pas les taureaux qui sont les protecteurs et meneurs du troupeau avec suffisamment de respect.",
-  "an11.22:1.4": "Mendiants, un bouvier doué de ces onze caractéristiques est incapable de s’occuper d’un troupeau de vaches et de le faire croître."
+  "an11.22:1.4": "Mendiants, un bouvier doué de ces onze caractéristiques est incapable de s’occuper d’un troupeau de vaches et de le faire croître.",
+  "an11.22:2.1": "De la même manière, mendiants, un mendiant doué de onze caractéristiques est incapable de rester à observer l’impermanence dans l’œil (…)"
 }
