--- a/translation/fr/sekha/sutta/an/an11/an11.22-29_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.22-29_translation-fr-sekha.json
@@ -9,5 +9,6 @@
   "an11.22:1.4": "Mendiants, un bouvier doué de ces onze caractéristiques est incapable de s’occuper d’un troupeau de vaches et de le faire croître.",
   "an11.22:2.1": "De la même manière, mendiants, un mendiant doué de onze caractéristiques est incapable de rester à observer l’impermanence dans l’œil (…)",
   "an11.22:3.1": "(…)",
-  "an11.23:1.1": "incapable de rester à observer l’insatisfaisance dans l’œil (…)"
+  "an11.23:1.1": "incapable de rester à observer l’insatisfaisance dans l’œil (…)",
+  "an11.24:1.1": "incapable de rester à observer le sans-propriétaire dans l’œil (…)"
 }
