Translations by BhikkhuSekha to translation/fr/sekha/sutta/an/an11/an11.22-29_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/an/an11/an11.22-29_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.22-29_translation-fr-sekha.json
@@ -13,5 +13,6 @@
   "an11.24:1.1": "incapable de rester à observer le sans-propriétaire dans l’œil (…)",
   "an11.25:1.1": "incapable de rester à observer la destruction dans l’œil (…)",
   "an11.26:1.1": "incapable de rester à observer l’arrêt dans l’œil (…)",
-  "an11.27:1.1": "incapable de rester à observer la disparition dans l’œil (…)"
+  "an11.27:1.1": "incapable de rester à observer la disparition dans l’œil (…)",
+  "an11.28:1.1": "incapable de rester à observer la cessation dans l’œil (…)"
 }
