--- a/translation/fr/sekha/sutta/an/an11/an11.22-29_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.22-29_translation-fr-sekha.json
@@ -14,5 +14,6 @@
   "an11.25:1.1": "incapable de rester à observer la destruction dans l’œil (…)",
   "an11.26:1.1": "incapable de rester à observer l’arrêt dans l’œil (…)",
   "an11.27:1.1": "incapable de rester à observer la disparition dans l’œil (…)",
-  "an11.28:1.1": "incapable de rester à observer la cessation dans l’œil (…)"
+  "an11.28:1.1": "incapable de rester à observer la cessation dans l’œil (…)",
+  "an11.29:1.1": "incapable de rester à observer la renonciation dans l’œil."
 }
