Translations by BhikkhuSekha to translation/fr/sekha/sutta/an/an11/an11.30-69_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/an/an11/an11.30-69_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.30-69_translation-fr-sekha.json
@@ -1,3 +1,4 @@
 {
-  "an11.30-69:0.1": "Discours Sous Forme De Listes 11.30–69"
+  "an11.30-69:0.1": "Discours Sous Forme De Listes 11.30–69",
+  "an11.30-69:0.2": "Premier groupe de cinquante discours"
 }
