--- a/translation/fr/sekha/sutta/an/an11/an11.30-69_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.30-69_translation-fr-sekha.json
@@ -4,5 +4,7 @@
   "an11.30-69:0.3": "Similarité",
   "an11.30-69:1.2": "dans l’oreille (…)",
   "an11.30-69:1.3": "dans le nez (…)",
-  "an11.30-69:1.4": "dans la langue (…)"
+  "an11.30-69:1.4": "dans la langue (…)",
+  "an11.30-69:1.5": "dans le corps (…)",
+  "an11.30-69:1.6": "dans le mental (…)"
 }
