--- a/translation/fr/sekha/sutta/an/an11/an11.30-69_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.30-69_translation-fr-sekha.json
@@ -3,7 +3,7 @@
   "an11.30-69:0.2": "Premier groupe de cinquante discours",
   "an11.30-69:0.3": "Similarité",
   "an11.30-69:0.4": "Discours sur les oreilles etc. sans titre",
-  "an11.30-69:1.1": "(il faut continuer les répétitions comme précédemment)",
+  "an11.30-69:1.1": "(chacun des organes est à développer comme dans le cas de l’œil)",
   "an11.30-69:1.2": "dans l’oreille (…)",
   "an11.30-69:1.3": "dans le nez (…)",
   "an11.30-69:1.4": "dans la langue (…)",
