Translations by BhikkhuSekha to translation/fr/sekha/sutta/an/an11/an11.118-165_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/an/an11/an11.118-165_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.118-165_translation-fr-sekha.json
@@ -2,5 +2,6 @@
   "an11.118-165:0.1": "Discours Sous Forme De Listes 11.118–165",
   "an11.118-165:0.2": "Premier groupe de cinquante discours",
   "an11.118-165:0.3": "Similarité",
-  "an11.118-165:0.4": "Discours sur la conscience occulaire etc."
+  "an11.118-165:0.4": "Discours sur la conscience occulaire etc.",
+  "an11.118-165:1.1": "(chacun des items est à développer comme dans le cas de l’œil)"
 }
