Translations by BhikkhuSekha to translation/fr/sekha/sutta/an/an11/an11.118-165_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/an/an11/an11.118-165_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.118-165_translation-fr-sekha.json
@@ -8,5 +8,6 @@
   "an11.118-165:1.3": "dans la conscience auditive (…)",
   "an11.118-165:1.4": "dans la conscience olfactive (…)",
   "an11.118-165:1.5": "dans la conscience gustative (…)",
-  "an11.118-165:1.6": "dans la conscience corporelle (…)"
+  "an11.118-165:1.6": "dans la conscience corporelle (…)",
+  "an11.118-165:1.7": "dans la conscience mentale (…)"
 }
