Translations by BhikkhuSekha to translation/fr/sekha/sutta/an/an11/an11.166-213_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/an/an11/an11.166-213_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.166-213_translation-fr-sekha.json
@@ -1,5 +1,6 @@
 {
   "an11.166-213:0.1": "Discours Sous Forme De Listes 11.166–213",
   "an11.166-213:0.2": "Premier groupe de cinquante discours",
-  "an11.166-213:0.3": "Similarité"
+  "an11.166-213:0.3": "Similarité",
+  "an11.166-213:1.2": "(…) dans le contact oculaire (…)"
 }
