Translations by BhikkhuSekha to translation/fr/sekha/sutta/an/an11/an11.214-261_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/an/an11/an11.214-261_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.214-261_translation-fr-sekha.json
@@ -1,5 +1,6 @@
 {
   "an11.214-261:0.1": "Discours Sous Forme De Listes 11.214–261",
   "an11.214-261:0.2": "Premier groupe de cinquante discours",
+  "an11.214-261:0.3": "Similarité",
   "an11.214-261:0.4": "Discours sur ressentis engendrés par le contact oculaire etc."
 }
