Translations by BhikkhuSekha to translation/fr/sekha/sutta/an/an11/an11.310-357_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/an/an11/an11.310-357_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.310-357_translation-fr-sekha.json
@@ -3,5 +3,6 @@
   "an11.310-357:0.2": "Premier groupe de cinquante discours",
   "an11.310-357:0.3": "Similarité",
   "an11.310-357:0.4": "Discours sur l’intention liée aux formes visibles etc.",
-  "an11.310-357:1.1": "(chacun des items est à développer comme dans le cas de l’œil)"
+  "an11.310-357:1.1": "(chacun des items est à développer comme dans le cas de l’œil)",
+  "an11.310-357:1.2": "(…) par rapport à l’intention liée aux formes visibles (…)"
 }
