Translations by BhikkhuSekha to translation/fr/sekha/sutta/an/an11/an11.358-405_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/an/an11/an11.358-405_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.358-405_translation-fr-sekha.json
@@ -6,5 +6,6 @@
   "an11.358-405:1.1": "(chacun des items est à développer comme dans le cas de l’œil)",
   "an11.358-405:1.2": "(…) par rapport à la Soif de formes visibles (…)",
   "an11.358-405:1.3": "par rapport à la Soif de sons (…)",
-  "an11.358-405:1.4": "par rapport à la Soif d’odeurs (…)"
+  "an11.358-405:1.4": "par rapport à la Soif d’odeurs (…)",
+  "an11.358-405:1.5": "par rapport à la Soif de saveurs (…)"
 }
