Translations by BhikkhuSekha to translation/fr/sekha/sutta/an/an11/an11.406-453_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/an/an11/an11.406-453_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.406-453_translation-fr-sekha.json
@@ -2,5 +2,6 @@
   "an11.406-453:0.1": "Discours Sous Forme De Listes 11.406–453",
   "an11.406-453:0.2": "Premier groupe de cinquante discours",
   "an11.406-453:0.3": "Similarité",
+  "an11.406-453:0.4": "Discours sur les pensées liées aux formes visibles etc.",
   "an11.406-453:1.1": "(chacun des items est à développer comme dans le cas de l’œil)"
 }
