Translations by BhikkhuSekha to translation/fr/sekha/sutta/an/an11/an11.454-501_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/an/an11/an11.454-501_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.454-501_translation-fr-sekha.json
@@ -4,5 +4,6 @@
   "an11.454-501:0.3": "Similarité",
   "an11.454-501:1.2": "(…) dans les réflexions liées aux formes visibles (…)",
   "an11.454-501:1.3": "dans les réflexions liées aux sons (…)",
-  "an11.454-501:1.4": "dans les réflexions liées aux odeurs (…)"
+  "an11.454-501:1.4": "dans les réflexions liées aux odeurs (…)",
+  "an11.454-501:1.5": "dans les réflexions liées aux saveurs (…)"
 }
