Translations by BhikkhuSekha to translation/fr/sekha/sutta/an/an11/an11.502-981_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/an/an11/an11.502-981_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.502-981_translation-fr-sekha.json
@@ -1,3 +1,4 @@
 {
-  "an11.502-981:0.1": "Discours Sous Forme De Listes 11.502–981"
+  "an11.502-981:0.1": "Discours Sous Forme De Listes 11.502–981",
+  "an11.502-981:0.2": "Premier groupe de cinquante discours"
 }
