Translations by BhikkhuSekha to translation/fr/sekha/sutta/an/an11/an11.502-981_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/an/an11/an11.502-981_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.502-981_translation-fr-sekha.json
@@ -2,5 +2,6 @@
   "an11.502-981:0.1": "Discours Sous Forme De Listes 11.502–981",
   "an11.502-981:0.2": "Premier groupe de cinquante discours",
   "an11.502-981:0.3": "Similarité",
-  "an11.502-981:1.1": "Mendiants, un bouvier doué de onze caractéristiques est capable de s’occuper d’un troupeau de vaches et de le faire croître."
+  "an11.502-981:1.1": "Mendiants, un bouvier doué de onze caractéristiques est capable de s’occuper d’un troupeau de vaches et de le faire croître.",
+  "an11.502-981:1.2": "Quelles sont ces onze ?"
 }
