Translations by BhikkhuSekha to translation/fr/sekha/sutta/an/an11/an11.983-991_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/an/an11/an11.983-991_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.983-991_translation-fr-sekha.json
@@ -1,4 +1,5 @@
 {
   "an11.983-991:0.1": "Discours Sous Forme De Listes 11.983–991",
-  "an11.983-991:0.2": "Premier groupe de cinquante discours"
+  "an11.983-991:0.2": "Premier groupe de cinquante discours",
+  "an11.983-991:0.3": "Série de répétitions sur l’avidité"
 }
