Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -18,7 +18,7 @@
   "pli-tv-kd10:1.2.3": "“This isn’t an offense, ",
   "pli-tv-kd10:1.2.4": "and so I haven’t committed any. ",
   "pli-tv-kd10:1.2.5": "And I haven’t been ejected, ",
-  "pli-tv-kd10:1.2.6": "since the legal procedure was illegitimate, reversible, and unfit to stand. ",
+  "pli-tv-kd10:1.2.6": "for the legal procedure was illegitimate, reversible, and unfit to stand. ",
   "pli-tv-kd10:1.2.7": "Please side with me, Venerables, in accordance with the Teaching and the Monastic Law.” ",
   "pli-tv-kd10:1.2.8": "He was able to form a faction. ",
   "pli-tv-kd10:1.2.9": "He then sent the same message to his friends in the country, ",
