Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -27,7 +27,7 @@
   "pli-tv-kd10:1.3.2": "“This isn’t an offense, ",
   "pli-tv-kd10:1.3.3": "and so this monk hasn’t committed any. ",
   "pli-tv-kd10:1.3.4": "He hasn’t been ejected, ",
-  "pli-tv-kd10:1.3.5": "since the legal procedure was illegitimate, reversible, and unfit to stand.” ",
+  "pli-tv-kd10:1.3.5": "for the legal procedure was illegitimate, reversible, and unfit to stand.” ",
   "pli-tv-kd10:1.3.6": "They replied, ",
   "pli-tv-kd10:1.3.7": "“This is an offense, ",
   "pli-tv-kd10:1.3.8": "and he’s committed it. ",
