Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -95,7 +95,7 @@
   "pli-tv-kd10:2.1.10": "The Buddha rebuked them … ",
   "pli-tv-kd10:2.1.11": "He then gave a teaching and addressed the monks: ",
   "pli-tv-kd10:2.1.12": "“When the Sangha is divided and the monks are behaving contrary to the Teaching and are not on friendly terms, ",
-  "pli-tv-kd10:2.1.13": "they should sit down and reflect, ‘We won’t show improper physical and verbal behavior, such as grabbing one another with our hands.’ ",
+  "pli-tv-kd10:2.1.13": "they should sit down and reflect, ‘We won’t behave improperly by body or speech, such as grabbing one another.’ ",
   "pli-tv-kd10:2.1.14": "When the Sangha is divided, but the monks are behaving in accordance with the Teaching and are on friendly terms, they should sit down one seat apart.” ",
   "pli-tv-kd10:2.2.1": "The monks were also arguing and disputing in the midst of the Sangha, attacking one another verbally, ",
   "pli-tv-kd10:2.2.2": "and were unable to resolve that legal issue. ",
