Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -330,7 +330,7 @@
   "pli-tv-kd10:4.1.4": "The Buddha sat down on the prepared seat and washed his feet. ",
   "pli-tv-kd10:4.1.5": "When Bhagu had bowed and sat down, ",
   "pli-tv-kd10:4.1.6": "the Buddha said to him, ",
-  "pli-tv-kd10:4.1.7": "“I hope you are keeping well, monk, ",
+  "pli-tv-kd10:4.1.7": "“I hope you’re keeping well, monk, ",
   "pli-tv-kd10:4.1.8": "I hope you’re getting by. I hope you’re not having any trouble getting almsfood?” ",
   "pli-tv-kd10:4.1.9": "“I’m keeping well, Venerable Sir, I’m getting by. ",
   "pli-tv-kd10:4.1.10": "I’m having no trouble getting almsfood.” ",
